fixed loading bug and added preservation of line breaks in notes textarea

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -93,7 +93,7 @@ span, a, li , .btn, div{
 }
 
 .notes-text-size{ 
-  font-size: 16px; 
+  font-size: 18px; 
 }
 
 .panel-heading .accordion-toggle:after {
